--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,8 @@
         "stdlib.h": "c",
         "inet.h": "c",
         "sstream": "c",
-        "string.h": "c"
+        "string.h": "c",
+        "types.h": "c"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
